<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_page"
    android:background="@color/dark_blue">

  <RelativeLayout
      android:id="@+id/relativeLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="35dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/change"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_compare_arrows_24"
        android:contentDescription="@string/btn_next" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/change"
        android:layout_marginStart="-1dp"
        android:fontFamily="@font/patuaone_regular"
        android:paddingTop="10dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

  </RelativeLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:background="@drawable/drawer">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/patuaone_regular"
          android:text="@string/welcom_back"
          android:textColor="@color/black"
          android:textSize="33sp"
          android:textStyle="bold" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/robotoslab_regular"
          android:text="@string/welcome_back_discreiption"
          android:textColor="@color/text_color"
          android:textSize="12sp"
          android:textStyle="bold"
          android:paddingLeft="5dp"/>

      <EditText
          android:id="@+id/txt_email"
          android:layout_marginTop="35dp"
          android:layout_width="match_parent"
          android:layout_height="55dp"
          android:background="@drawable/textbox1"
          android:drawableStart="@drawable/baseline_email_24"
          android:drawablePadding="15dp"
          android:hint="@string/email"
          android:paddingHorizontal="25dp"
          android:textColorHint="@color/text_color"
          android:inputType="textEmailAddress"
          android:autofillHints=""
          tools:ignore="VisualLintTextFieldSize"
          android:textColor="@color/black"
          />

      <EditText
          android:id="@+id/txt_password"
          android:layout_width="match_parent"
          android:layout_height="55dp"
          android:layout_marginTop="25dp"
          android:background="@drawable/textbox1"
          android:drawableStart="@drawable/baseline_key_24"
          android:drawablePadding="15dp"
          android:hint="@string/password"
          android:inputType="textPassword"
          android:paddingHorizontal="25dp"
          android:textColorHint="@color/text_color"
          android:autofillHints=""
          tools:ignore="VisualLintTextFieldSize"
          android:textColor="@color/black"
          />

      <Button
          android:id="@+id/sign_in"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_marginTop="35dp"
          android:background="@drawable/button1"
          android:elevation="10dp"
          android:fontFamily="@font/robotoslab_regular"
          android:text="@string/sign_in"
          android:textAllCaps="false"
          android:textSize="26sp"
          android:textStyle="bold"
          android:transformPivotX="3dp"
          android:transformPivotY="5dp"
          android:textColor="@color/white"
          tools:ignore="DuplicateSpeakableTextCheck" />

      <TextView
          android:id="@+id/btn_forgetpass"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:minHeight="48dp"
          android:onClick="onClickForget_Password"
          android:text="@string/forget_password"
          android:textAlignment="center"
          android:textColor="@color/text_color"
          android:textSize="17sp"
          android:fontFamily="@font/robotoslab_regular"/>


    </LinearLayout>

    <ImageView
        android:layout_marginVertical="15dp"
        android:id="@+id/imageView"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/devider"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        />

    <LinearLayout
        android:paddingBottom="20dp"
        android:layout_marginBottom="40dp"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBaseline_toBottomOf="@drawable/devider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginHorizontal="30dp">

      <Button
          android:id="@+id/btn_registration"
          android:layout_marginTop="25dp"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:background="@drawable/button2"
          android:elevation="10dp"
          android:textColor="@color/black"
          android:fontFamily="@font/robotoslab_regular"
          android:text="@string/new_account"
          android:textAllCaps="false"
          android:textSize="23sp"
          android:textStyle="bold"
          android:transformPivotX="3dp"
          android:transformPivotY="5dp"
          android:paddingHorizontal="20dp"
          tools:ignore="DuplicateSpeakableTextCheck" />

    </LinearLayout>


  </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>